--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,8 @@ services:
       - "5432:5432"
     logging:
       driver: none
+    volumes:
+      - ./db:/var/lib/postgresql/data:rw
 
   web:
     container_name: web
