--- a/src/dbt_project.yml
+++ b/src/dbt_project.yml
@@ -2,7 +2,7 @@
 # Name your project! Project names should contain only lowercase characters
 # and underscores. A good package name should reflect your organization's
 # name or the intended use of these models
-name: 'my_new_project'
+name: 'yousician'
 version: '1.0.0'
 config-version: 2
 
@@ -37,5 +37,5 @@ models:
   yousician:
       +required_docs: true
       # Applies to all files under models/example/
-      example:
+      staging:
           materialized: view
